<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_camera"
            android:icon="@drawable/ic_camera_alt_black_24dp"
            android:title="@string/title_camera"/>

    <item
            android:id="@+id/navigation_more"
            android:icon="@drawable/ic_more_black_24dp"
            android:title="@string/title_more"/>

</menu>
